--- a/pom.xml
+++ b/pom.xml
@@ -21,5 +21,11 @@
             <version>3.5</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.arturmkrtchyan.sizeof4j</groupId>
+            <artifactId>sizeof4j</artifactId>
+            <version>0.1.0</version>
+        </dependency>
+
     </dependencies>
 </project>
